clang/test/BSC/Negative/Ownership/ArrayElem/arrayelem_invalid_decl/arrayelem_invalid_decl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct WithBorrow {
  int *_Borrow p;
};
struct WithBorrowArrayElem {
  int *_Borrow _ArrayElem p;
};

struct WithOwned {
  int *_Owned p;
};
struct WithOwnedArrayElem {
  int *_Owned _ArrayElem p;
};

void foo(void) {
  int _ArrayElem scalar; // expected-error {{type of 'int' cannot be qualified by '_ArrayElem'}}
  int *_ArrayElem raw_ptr; // expected-error {{'_ArrayElem' must be used with '_Owned' or '_Borrow' together to qualify a pointer type}}

  struct WithBorrow *_Borrow _ArrayElem bp1; // expected-error {{pointee type of 'struct WithBorrow *_Borrow _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}} expected-error {{type of 'struct WithBorrow' cannot be qualified by '_Borrow'(even indirectly), 'struct WithBorrow' contains '_Borrow' type}}
  struct WithBorrow *_Owned _ArrayElem bp2; // expected-error {{pointee type of 'struct WithBorrow *_Owned _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
  struct WithBorrowArrayElem *_Borrow _ArrayElem bp3; // expected-error {{pointee type of 'struct WithBorrowArrayElem *_Borrow _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}} expected-error {{type of 'struct WithBorrowArrayElem' cannot be qualified by '_Borrow'(even indirectly), 'struct WithBorrowArrayElem' contains '_Borrow' type}}
  struct WithBorrowArrayElem *_Owned _ArrayElem bp4; // expected-error {{pointee type of 'struct WithBorrowArrayElem *_Owned _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
  struct WithOwned *_Borrow _ArrayElem dp1; // expected-error {{pointee type of 'struct WithOwned *_Borrow _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
  struct WithOwned *_Owned _ArrayElem dp2; // expected-error {{pointee type of 'struct WithOwned *_Owned _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
  struct WithOwnedArrayElem *_Borrow _ArrayElem dp3; // expected-error {{pointee type of 'struct WithOwnedArrayElem *_Borrow _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
  struct WithOwnedArrayElem *_Owned _ArrayElem dp4; // expected-error {{pointee type of 'struct WithOwnedArrayElem *_Owned _ArrayElem' cannot be _Owned or _Borrow pointers or contain _Owned or _Borrow qualified fields}}
}

